refactor: public 제거, 불필요한 import 제거, 기타 리팩토링